--- a/style.css
+++ b/style.css
@@ -132,16 +132,16 @@ label {
 
 .fraca {
     width: 25%;
-    background-color: #E71B32;
+    background-color: #0400fd;
 }
 
 .media {
-    background-color: #FAF408;
+    background-color: #fa0000;
     width: 50%;
 }
 
 .forte {
-    background-color: #00FF85;
+    background-color: #310069;
     width: 100%;
 }
 
