--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
 :root {
-    --branco: white;
-    --cor-de-fundo: #00162E;
-    --fundo-senha: #00244D;
-    --fundo-texto: #001E40;
-    --borda: #0075FF;
+    --branco: rgb(0, 0, 0);
+    --cor-de-fundo: #002e04;
+    --fundo-senha: #075000;
+    --fundo-texto: #146400;
+    --borda: #ff0000;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
@@ -86,6 +86,13 @@ body {
     margin: 0 auto;
 }
 
+    width: 50%;
+    margin: 0 auto;
+}
+
+.parametro-senha-botoes {
+    display: flex;
+    justify-content: center;
 .parametro-senha-botoes {
     display: flex;
     justify-content: center;
@@ -132,16 +139,16 @@ label {
 
 .fraca {
     width: 25%;
-    background-color: #E71B32;
+    background-color: #6000b9;
 }
 
 .media {
-    background-color: #FAF408;
+    background-color: #08fa14;
     width: 50%;
 }
 
 .forte {
-    background-color: #00FF85;
+    background-color: #00f7ff;
     width: 100%;
 }
 
